Added onCLick function

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12"><button id="notifyBtn" class="btn btn-primary">Notify me when</button></div>
+                <div class="col-12"><button id="notifyBtn" onClick="addNotif()" class="btn btn-primary">Notify me when</button></div>
             </div>
         </div>
 
